--- a/client/css/main.css
+++ b/client/css/main.css
@@ -1,9 +1,28 @@
+html, body, #app, #root-div {
+  padding: 0;
+  margin: 0;
+  height: 100%;
+  width: 100%;
+}
 
+/* -- Nav styling -- */
+
+.nav_container {
+  display: inline-block;
+  float: left;
+  margin: 0;
+  height: 100%;
+  width: 15%;
+  background-color: black;
+}
+
+.menu_simple {
+  width: 100%;
+}
 
 .menu_simple ul {
     margin: 0;
     padding: 0;
-    width:185px;
     list-style-type: none;
 }
 
@@ -22,4 +41,15 @@
 .menu_simple ul li a:hover, .menu_simple ul li .current {
     color: white;
     background-color: #5FD367;
+}
+
+/* -- personalities Index styling -- */
+
+.personalitiesIndex-container {
+  width: 85%;
+  height: 100%;
+  display: inline-block;
+  float: left;
+  margin: 0;
+  background-color: red;
 }
