sass hot reloading added to dev scripts. <a> tags changed to <Link>

--- a/server/static/main.css
+++ b/server/static/main.css
@@ -62,8 +62,7 @@ h5, h3 {
     background-color: #5FD367; }
 
 .nav_sub {
-  display: block;
-  background-color: red; }
+  display: inline; }
 
 /* -- personalities Index styling -- */
 .content-container {
