--- a/client/css/main.scss
+++ b/client/css/main.scss
@@ -1,3 +1,5 @@
+@import 'footer';
+
 html, body, #app, #root-div {
   padding: 0;
   margin: 0;
@@ -5,8 +7,14 @@ html, body, #app, #root-div {
   width: 100%;
 }
 
-h5 {
+h5, h3 {
   color: white;
+}
+
+/* -- component ids -- */
+#nav_component {
+  height: 100%;
+  overflow: scroll;
 }
 
 /* -- Nav styling -- */
@@ -25,31 +33,81 @@ h5 {
   margin-top: 3%;
 }
 
-.menu_simple {
-  width: 100%;
+#logo_text {
+  color: purple;
 }
 
-.menu_simple ul {
+.menu_simple {
+  width: 100%;
+  ul {
     margin: 0;
     padding: 0;
     list-style-type: none;
-}
+  }
 
-.menu_simple ul li a {
+  ul li a {
     text-decoration: none;
     color: white;
     padding: 10.5px 11px;
     background-color: #005555;
     display:block;
+  }
+
+  ul li a:visited {
+    color: white;
+  }
+
+  ul li a:hover, .menu_simple ul li .current {
+      color: white;
+      background-color: #5FD367;
+  }
 }
 
-.menu_simple ul li a:visited {
-    color: white;
+// sub nav styling
+.nav-sub {
+  display: block;
+  background-color: rgba(211, 211, 211, 0.5);
 }
 
-.menu_simple ul li a:hover, .menu_simple ul li .current {
+.nav-sub-header {
+
+}
+
+.nav-sub-content {
+  margin-top: 2%;
+  
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+  }
+
+  li {
+    height: 100%;
+    float: left;
+  }
+
+  .nav-sub-link {
+    float: right;
+  }
+
+  li a {
+    display: block;
     color: white;
-    background-color: #5FD367;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+
+  li a:hover:not(.active) {
+    background-color: green;
+  }
+
+  .active {
+    background-color: purple;
+  }
 }
 
 /* -- personalities Index styling -- */
@@ -61,4 +119,10 @@ h5 {
   float: left;
   margin: 0;
   background-color: green;
+}
+
+/* -- personalities-list-container styling -- */
+
+.personalities-list-container {
+  background-color: rgba(211, 211, 211, 0.5);
 }
