--- a/client/css/footer.css
+++ b/client/css/footer.css
@@ -1,19 +1,14 @@
 .footer_simple {
-  width: 100%; }
+  width: 100%;
+  float: left;
+  bottom: 0; }
   .footer_simple ul {
     margin: 0;
     padding: 0;
     list-style-type: none; }
   .footer_simple ul li a {
     text-decoration: none;
-    color: white;
     padding: 10.5px 11px;
-    background-color: #005555;
     display: block; }
-  .footer_simple ul li a:visited {
-    color: white; }
-  .footer_simple ul li a:hover, .footer_simple .menu_simple ul li .current {
-    color: white;
-    background-color: #5FD367; }
 
 /*# sourceMappingURL=footer.css.map */
