--- a/client/css/main.css
+++ b/client/css/main.css
@@ -1,20 +1,15 @@
 .footer_simple {
-  width: 100%; }
+  width: 100%;
+  float: left;
+  bottom: 0; }
   .footer_simple ul {
     margin: 0;
     padding: 0;
     list-style-type: none; }
   .footer_simple ul li a {
     text-decoration: none;
-    color: white;
     padding: 10.5px 11px;
-    background-color: #005555;
     display: block; }
-  .footer_simple ul li a:visited {
-    color: white; }
-  .footer_simple ul li a:hover, .footer_simple .menu_simple ul li .current {
-    color: white;
-    background-color: #5FD367; }
 
 html, body, #app, #root-div {
   padding: 0;
@@ -22,8 +17,24 @@ html, body, #app, #root-div {
   height: 100%;
   width: 100%; }
 
+h1, h2, h3, h4, h5, p {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  background: transparent; }
+
 h5, h3 {
-  color: white; }
+  color: black; }
+
+/* -- App.jsx Styling -- */
+.content-container {
+  width: 85%;
+  height: 100%;
+  display: inline-block;
+  float: left;
+  margin: 0;
+  background-color: #cfcfcf;
+  overflow: scroll; }
 
 /* -- component ids -- */
 #nav_component {
@@ -37,11 +48,14 @@ h5, h3 {
   margin: 0;
   height: 100%;
   width: 15%;
-  background-color: black;
-  text-align: center; }
+  text-align: center;
+  background-color: white; }
 
 .logo {
   margin-top: 3%; }
+
+#logo_text {
+  color: purple; }
 
 .menu_simple {
   width: 100%; }
@@ -51,27 +65,48 @@ h5, h3 {
     list-style-type: none; }
   .menu_simple ul li a {
     text-decoration: none;
-    color: white;
     padding: 10.5px 11px;
-    background-color: #005555;
     display: block; }
-  .menu_simple ul li a:visited {
-    color: white; }
-  .menu_simple ul li a:hover, .menu_simple .menu_simple ul li .current {
-    color: white;
-    background-color: #5FD367; }
 
-.nav_sub {
-  display: block;
-  background-color: red; }
+.nav-sub {
+  display: block; }
+
+.nav-sub-content {
+  margin: 0%; }
+  .nav-sub-content ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: white; }
+  .nav-sub-content li {
+    height: 100%;
+    float: left;
+    background-color: #333; }
+  .nav-sub-content .nav-sub-link {
+    float: right; }
+  .nav-sub-content li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none; }
+  .nav-sub-content li a:hover:not(.active) {
+    background-color: green; }
+  .nav-sub-content .active {
+    background-color: purple; }
 
 /* -- personalities Index styling -- */
-.content-container {
-  width: 85%;
-  height: 100%;
+.personalities-list-container {
+  width: 95%;
+  margin: 2.5%;
+  background-color: white; }
+
+.personality-card {
   display: inline-block;
-  float: left;
-  margin: 0;
-  background-color: green; }
+  width: 29%;
+  margin: 1%;
+  padding: 1%;
+  background-color: rgba(200, 200, 200, 0.5); }
 
 /*# sourceMappingURL=main.css.map */
