--- a/client/css/main.scss
+++ b/client/css/main.scss
@@ -31,7 +31,7 @@ h5, h3 {
   margin: 0;
   background-color: rgb(207, 207, 207);
   overflow: scroll;
-  
+
 }
 
 /* -- component ids -- */
@@ -130,12 +130,18 @@ h5, h3 {
   }
 }
 
-/* -- personalities Index styling -- */
+/* -- PAGE CONTENT MIXIN -- */
 
-.personalities-list-container {
+@mixin container-styling() {
   width: 95%;
   margin: 2.5%;
   background-color: white;
+}
+
+/* -- personalities Index styling -- */
+
+.personalities-list-container {
+  @include container-styling();
 }
 
 .personality-card {
@@ -145,4 +151,10 @@ h5, h3 {
   padding: 1%;
   background-color: rgba(200, 200, 200, 0.5);
   // border: 3px solid #73AD21;
+}
+
+// Campaign Styling
+
+.campaign-content {
+  @include container-styling();
 }
