--- a/client/css/main.css
+++ b/client/css/main.css
@@ -115,4 +115,9 @@ h5, h3 {
   margin: 2.5%;
   background-color: white; }
 
+.personality-content {
+  width: 95%;
+  margin: 2.5%;
+  background-color: white; }
+
 /*# sourceMappingURL=main.css.map */
