--- a/server/static/main.css
+++ b/server/static/main.css
@@ -49,7 +49,7 @@ h5, h3 {
   height: 100%;
   width: 15%;
   text-align: center;
-  background-color: red; }
+  background-color: white; }
 
 .logo {
   margin-top: 3%; }
@@ -116,6 +116,11 @@ h5, h3 {
   background-color: white; }
 
 .personality-content {
+  width: 95%;
+  margin: 2.5%;
+  background-color: white; }
+
+.mediaLibrary-content {
   width: 95%;
   margin: 2.5%;
   background-color: white; }
