--- a/server/static/main.scss
+++ b/server/static/main.scss
@@ -48,7 +48,7 @@ h5, h3 {
   height: 100%;
   width: 15%;
   text-align: center;
-  background-color: white;
+  background-color: red;
   // border: 1px solid rgb(207, 207, 207);
 }
 
@@ -161,5 +161,11 @@ h5, h3 {
 // Personality Styling
 
 .personality-content {
+  @include container-styling();
+}
+
+//Media Library Styling
+
+.mediaLibrary-content {
   @include container-styling();
 }
