--- a/client/css/main.scss
+++ b/client/css/main.scss
@@ -48,7 +48,7 @@ h5, h3 {
   height: 100%;
   width: 15%;
   text-align: center;
-  background-color: red;
+  background-color: white;
   // border: 1px solid rgb(207, 207, 207);
 }
 
